git subrepo clone --force git://github.com/araraloren/Getopt-Kinoko.git araraloren/Getopt-Kinoko
subrepo:
  subdir:   "araraloren/Getopt-Kinoko"
  merged:   "5cb9b9d"
upstream:
  origin:   "git://github.com/araraloren/Getopt-Kinoko.git"
  branch:   "master"
  commit:   "5cb9b9d"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/araraloren/Getopt-Kinoko/TODO
+++ b/araraloren/Getopt-Kinoko/TODO
@@ -6,4 +6,7 @@
 	√ add deep copy
 + 浮点型选项类？ 相对于整数型选项，支持小数
 	+ add float option
-+ gnu-style not complete
+√ gnu-style not complete
+√ Option comment
+√ pass OptionSet when NonOption::All callback called
++ save/restore config value
