git subrepo clone --force git://github.com/MARTIMM/PKCS5.git MARTIMM/PKCS5
subrepo:
  subdir:   "MARTIMM/PKCS5"
  merged:   "16bc21d"
upstream:
  origin:   "git://github.com/MARTIMM/PKCS5.git"
  branch:   "master"
  commit:   "16bc21d"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/MARTIMM/PKCS5/lib/PKCS5/PBKDF2.pod
+++ b/MARTIMM/PKCS5/lib/PKCS5/PBKDF2.pod
@@ -1,40 +1,11 @@
-#!/usr/bin/env perl6
-
-use v6.c;
-
-# Running the pod file will create a pdf using wkhtmltopdf
-#
-my Str $pod = "$*PROGRAM";
-my Str $pdf = $pod;
-$pdf ~~ s/\. <-[.]>+ $/.pdf/;
-shell( "perl6 --doc=HTML '$pod' | wkhtmltopdf - '$pdf'");
-
-#-------------------------------------------------------------------------------
-
 =begin pod
-
-=begin Xhtml
-<style>
-  pre {
-    border-width:       2px;
-    border-style:       solid;
-    border-color:       #060;
-    padding:            10px 0 3px 10px;
-    color:              #060;
-    background-color:   #eaefea;
-    font-family:        FreeMono;
-  }
-  td {
-    vertical-align:     top;
-  }
-</style>
-=end Xhtml
 
 =TITLE class PKCS5::PBKDF2
 
 =SUBTITLE 
 
-  package PKCS5 { class PBKDF2 { ... } }
+  unit package PKCS5;
+  class PBKDF2 { ... }
 
 =head1 Synopsis
 
@@ -55,19 +26,13 @@ shell( "perl6 --doc=HTML '$pod' | wkhtmltopdf - '$pdf'");
 
 =head2 new
 
-Defined as
-
   submethod BUILD (
     Callable :$CGH = &sha1,
     Int :$dklen,
   )
 
-Use
-
-  my PKCS5::PBKDF2 $p .= new;
-
 Initialize the derivation function. The cryptographic hash function C<CGH> is
-set to sha1 from the C<openSSL::Digest> by default, Other supported subs are
+set to sha1 from the C<openSSL::Digest> by default. Other supported subs are
 sha256 and md5 also from that module. Md5 can also be used from C<Digest::MD5>
 but is very much slower.
 
@@ -77,8 +42,6 @@ given, it becomes the size of the output length of the C<CGH>.
 
 =head2 derive
 
-Defined as
-
   method derive ( Buf $pw, Buf $salt, Int $i --> Buf )
 
 Calculate the derived key given the password C<$pw> and a salt C<$salt>. It
@@ -86,8 +49,6 @@ returns a Buf of length dklen specified to C<new()> when initializing.
 
 
 =head2 derive-hex
-
-Defined as
 
   method derive-hex ( Buf $pw, Buf $salt, Int $i --> Str )
 
