git subrepo clone --force git://github.com/p6-pdf/perl6-PDF-Grammar.git p6-pdf/perl6-PDF-Grammar
subrepo:
  subdir:   "p6-pdf/perl6-PDF-Grammar"
  merged:   "ec13c2a"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-PDF-Grammar.git"
  branch:   "master"
  commit:   "ec13c2a"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/p6-pdf/perl6-PDF-Grammar/Changes
+++ b/p6-pdf/perl6-PDF-Grammar/Changes
@@ -1,3 +1,6 @@
+    Release 0.0.8
+    - Renamed tokens char_delimiter -> char-delimiter, literal_delimiter -> literal-delimiter
+
     Release 0.0.7
     - Optimized stream and image tokens
     - Added PDF::Grammar::Content::Fast. A faster, more forgiving
