git subrepo clone --force git://github.com/p6-pdf/perl6-PDF-Grammar.git p6-pdf/perl6-PDF-Grammar
subrepo:
  subdir:   "p6-pdf/perl6-PDF-Grammar"
  merged:   "744de01"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-PDF-Grammar.git"
  branch:   "master"
  commit:   "744de01"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/p6-pdf/perl6-PDF-Grammar/Changes
+++ b/p6-pdf/perl6-PDF-Grammar/Changes
@@ -1,5 +1,6 @@
     Release 0.0.8
     - Renamed tokens char_delimiter -> char-delimiter, literal_delimiter -> literal-delimiter
+    - remove custom PDF::Grammar.parsefile method. Not needed in latest rakudo
 
     Release 0.0.7
     - Optimized stream and image tokens
