git subrepo clone --force git://github.com/p6-pdf/perl6-Font-AFM.git p6-pdf/perl6-Font-AFM
subrepo:
  subdir:   "p6-pdf/perl6-Font-AFM"
  merged:   "51d84e1"
upstream:
  origin:   "git://github.com/p6-pdf/perl6-Font-AFM.git"
  branch:   "master"
  commit:   "51d84e1"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/p6-pdf/perl6-Font-AFM/Changes
+++ b/p6-pdf/perl6-Font-AFM/Changes
@@ -5,6 +5,8 @@
      `$font.stringwidth(..., :kern)` and `$font.kern(...)` both now work.
      If the font lacks kerning data `:kern` is ignored and `$font.kern`
      returns a single element.
+   - Make class-name and metric-class methods private
+   - Use perl6.c TWEAK submethod
 
    Release 1.23.4
    Fixed %ISOLatin1Encoding character encoding table
