git subrepo clone --force git://github.com/p6-css/perl6-CSS-Module.git p6-css/perl6-CSS-Module
subrepo:
  subdir:   "p6-css/perl6-CSS-Module"
  merged:   "221f922"
upstream:
  origin:   "git://github.com/p6-css/perl6-CSS-Module.git"
  branch:   "master"
  commit:   "221f922"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/p6-css/perl6-CSS-Module/Changes
+++ b/p6-css/perl6-CSS-Module/Changes
@@ -1,3 +1,7 @@
+0.4.8 Break circular '@font-face' depdendency
+      - Add CSS/Module/CSS3/Actions.pm
+      - Add CSS/Module/CSS3/Fonts/AtFontFace.pm
+      - Remove dynamic loading from CSS3 and AtFontFace modules 
 0.4.7 - remove Panda dependency from make-properties.pl
       - work-around for issue #8 - background-position
 0.4.6 $module.parse-property now returns explicit Nil and warns
