--- a/zoffixznet/perl6-Pastebin-Gist/Changes
+++ b/zoffixznet/perl6-Pastebin-Gist/Changes
@@ -1,6 +1,9 @@
 Revision history for Pastebin-Gist
 
-1.001002  2015-12-13
+1.001003  2017-03-09
+  - Switch to better JSON encoder
+
+1.001002  2016-12-13
   - Replaced buggy JSON encoder
 
 1.001001  2015-10-11
