git subrepo clone --force https://github.com/nkh/P6-Data-Dump-Tree.git nkh/P6-Data-Dump-Tree
subrepo:
  subdir:   "nkh/P6-Data-Dump-Tree"
  merged:   "e2a5be9"
upstream:
  origin:   "https://github.com/nkh/P6-Data-Dump-Tree.git"
  branch:   "master"
  commit:   "e2a5be9"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/nkh/P6-Data-Dump-Tree/Todo
+++ b/nkh/P6-Data-Dump-Tree/Todo
@@ -1,3 +1,6 @@
+
+DDT_FINAL should be able to add a text to the dump as an extra information to user
+
 eqv bug with class o examples, lexical scope operator in rakudo, OUTER, ...
 
 report -match WHICH problem, match has no identity
