--- a/nkh/P6-Data-Dump-Tree/Todo
+++ b/nkh/P6-Data-Dump-Tree/Todo
@@ -1,31 +1,32 @@
 
-DDT_FINAL should be able to add a text to the dump as an extra information to user
-
-eqv bug with class o examples, lexical scope operator in rakudo, OUTER, ...
-
-report -match WHICH problem, match has no identity
-
-why has xx doesn't work in role, should 
-
-why can't pass role (does =>) with argument
-
-
-second pass to remove references that are not refered to
-
-user defined address name
-	is some nodes are of specific importance, give them name that can be used to 
-	display the reference rather than a standard @1234, eg, @important_node
-
-eqv not implemented for Match
-
-#color objects
-
-#scoped filters
 
 object size
 
 ColorStr class
 	keeps color and string separated, or colored string and length of uncolored string
+
+eqv not implemented for Match
+
+#2 colums display of dumps
+	given two dumps, handle colors, etc ... and show both side by side
+
+
+#why can't pass role (does =>) with argument
+
+#Allow filter to add text to the rendering of an element
+
+#display a[0..1| as a[0]
+
+#Only container containers can have names
+	give names to all possible elements or example a filter that can add names/hilight
+
+#user defined address name
+	is some nodes are of specific importance, give them name that can be used to 
+	display the reference rather than a standard @1234, eg, @important_node
+
+#color objects
+
+#scoped filters
 
 #paths
 	can be used in filters
