--- a/nkh/P6-Data-Dump-Tree/lib/Data/Dump/Tree.pod
+++ b/nkh/P6-Data-Dump-Tree/lib/Data/Dump/Tree.pod
@@ -86,9 +86,9 @@ returns an array containing the dump of the data structure
 	|  |- $.size = 6.Str
 	|  `- $.name = P6 class.Str
 	`- 4 = (3) @3
-	   |- 0 = a[0..1]
-	   |- 1 = a[1..2]
-	   `- 2 = a[2..3]
+	   |- 0 = a[0]
+	   |- 1 = a[1]
+	   `- 2 = a[2]
 
 =head1 DUMP 
 Each line of output consists 5 elements, 2 elements, the tree and the address,
@@ -129,13 +129,26 @@ Data::DumpTree will display
 
 =item  Lists as '(x)' where x is the number of element of the list
 
-=item  Maches as '[x..y|' where x..y is the match range
+=item  Maches as '[x..y]' where x..y is the match range or [x] for one element
 
 =head3 address
 the Data::Dump::Tree address is added to every container in the form of a '@'
 and an index that is incremented for heach container. If a container is found
 multiple times in the output, it will be rendered once only then referred to 
 by '@current_address = @first_time_seen' 
+
+It is possible to name containers by using I<set_element_name> before dumping 
+your data structure.
+
+	my $d = Data::Dump::Tree.new ;
+
+	$d.set_element_name($s[5], 'some list') ;
+	$d.set_element_name(@a, 'some array') ;
+
+	$d.dump($s) ;
+
+If an element is named, its name will be displayed next to his address, the
+first time it is displayed and when an element refers to it. 
 
 =head2 Configuration and Overrides
 There are multiple ways to configure the Dumper. You can pass a configuration
@@ -410,24 +423,18 @@ or change the B<rendering> of the object
 	{
 	@renderings.append: $glyph ~ "Int HEADER " ~ $depth ;
 
-	# in this trivial example we are replacing Ints by Hashes
-	# since the Hash we use also contains an Int, we make sure we don't
-	# recurs indefinitely
+	# need to set limit or we would create lists forever
+	if $depth < 2 { r = <1 2> } ;
 
-	if $depth < 3 
-		{
-		r = {a => 'str', b => 1 }  ;
+	# k, b, v, f are text
 
-		# k, b, v, f are text
+	k = k ~ ' will be replaced by Hash ' ;
+	#b = '' ;
+	#v = '' ;
+	#f = '' ;
 
-		k = k ~ ' will be replaced by Hash ' ;
-		#b = '' ;
-		#v = '' ;
-		#f = '' ;
-
-		final = DDT_NOT_FINAL ;
-		want_address = True ;
-		}
+	final = DDT_NOT_FINAL ;
+	want_address = True ;
 	}
 
 Note: You can not filter elements of type U<Mu> with DDT_HEADER filters but
@@ -455,7 +462,8 @@ Called when the element rendering is done.
 	}
 
 =head2 Data::Dump::Tree::Type::Nothing
-You can use this type to make DDT "vanish" some parts of a rendering
+You can use this type to have DDT make some elements of the structure disapear
+from the rendering
 
 =head3 Type element with only a name  
 If you return a Data::Dump::Tree::Type::Nothing in a type handler, then only
@@ -544,17 +552,17 @@ Use this role to display the type and address in Unicode superscript letters.
 
 =head3 Match objects
 U<Match> objects are displayed as the string that it matched as well as the
-match start and end position.
+match start and end position (inclusive, unlike .perl).
 
 	# multiline match
 	aaaaa
 	aaaaa
 	aaaaa
 	aaaaa
-	[0..24|
+	[0..23]
 	
 	# same match with PerlString role
-	"'aaaaa\naaaaa\naaaaa\naaaaa\n'[0..24|"  
+	"'aaaaa\naaaaa\naaaaa\naaaaa\n'[0..23]"  
 
 Some Roles are provided to allows you to change how Match object are displayed.
 
@@ -562,14 +570,14 @@ Some Roles are provided to allows you to change how Match object are displayed.
 Limits the length of the match string.
 
 	# default max length of 10 characters
-	aaaaa\naaaa(+14)[0..24|  
+	aaaaa\naaaa(+14)[0..23]  
 
 You can set the maximum string length either by specifying a length when the 
 role is added to the dumper.
 
 	$dumper does DDTR::MatchLimit(15) ;
 	
-	aaaaa\naaaaa\n(+12)'[0..24|  
+	aaaaa\naaaaa\n(+12)'[0..23]  
 
 or by setting the U<$.match_string_limit> member variable
 
@@ -577,7 +585,7 @@ or by setting the U<$.match_string_limit> member variable
 	...
 	$dumper.match_string_limit = 15 ;
 	
-	aaaaa\naaaaa\n(+12)[0..24|  
+	aaaaa\naaaaa\n(+12)[0..23]  
 
 The specified length is displayed, the length of the remaining part is
 displayed within parenthesis.
@@ -595,18 +603,18 @@ variable.
 
 	config [2]  
 	   0 = \{ \\s* '[' (\\w+) ']' \\h* \\n+ }.Regex  
-	   1 =     [passwords]\n        jack=password1\n (+74)[0..114|  
-	      section =>     [passwords]\n        jack=password1\n (+29)[0..69|  
-		 header =>     [passwords]\n[0..16|  
-		    0 => passwords[5..14|  
-		 kvpair =>         jack=password1\n[16..39|  
-		    identifier => jack[24..28|  
-		    key => jack[24..28|  
-		    identifier => password1[29..38|  
-		    value => password1[29..38|  
-		 kvpair =>         joy=muchmoresecure123\n[39..69|  
-		    identifier => joy[47..50|  
-		    key => joy[47..50|  
+	   1 =     [passwords]\n        jack=password1\n (+74)[0..113]  
+	      section =>     [passwords]\n        jack=password1\n (+29)[0..68]  
+		 header =>     [passwords]\n[0..15]  
+		    0 => passwords[5..13]  
+		 kvpair =>         jack=password1\n[16..38]  
+		    identifier => jack[24..27]  
+		    key => jack[24..27]  
+		    identifier => password1[29..37]  
+		    value => password1[29..37]  
+		 kvpair =>         joy=muchmoresecure123\n[39..68]  
+		    identifier => joy[47..49]  
+		    key => joy[47..49]  
 		
 =head1 BUGS
 Submit bugs (preferably as executable tests) and feel free to make 
