git subrepo clone --force git://github.com/zostay/p6-DOM-Tiny.git zostay/p6-DOM-Tiny
subrepo:
  subdir:   "zostay/p6-DOM-Tiny"
  merged:   "af05167"
upstream:
  origin:   "git://github.com/zostay/p6-DOM-Tiny.git"
  branch:   "master"
  commit:   "af05167"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/zostay/p6-DOM-Tiny/Changes
+++ b/zostay/p6-DOM-Tiny/Changes
@@ -1,3 +1,9 @@
+v0.3.3
+
+    * Fix bugs that cropped up with newer versions of Rakudo related to parsing
+      and the fact that many more methods now return Seq and need extra help to
+      make sure they don't break because of how Seq is optimized.
+
 v0.3.2
 
     * Slightly more permissive acceptance of stringifiable values being sent to
