git subrepo clone --force git://github.com/zostay/p6-Hash-MultiValue.git zostay/p6-Hash-MultiValue
subrepo:
  subdir:   "zostay/p6-Hash-MultiValue"
  merged:   "354442f"
upstream:
  origin:   "git://github.com/zostay/p6-Hash-MultiValue.git"
  branch:   "master"
  commit:   "354442f"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/zostay/p6-Hash-MultiValue/Changes
+++ b/zostay/p6-Hash-MultiValue/Changes
@@ -1,3 +1,9 @@
+v0.4    2017-04-14
+
+    * Reverses the previous compatibility change in from-pairs(). It is back to
+      a * slurpy with a test to verify that stays that way. That was such a bad
+      idea.
+     
 v0.3    2017-04-13
 
     * Adds a set of .new() constructors.
