git subrepo clone --force https://github.com/IanTayler/MinG.git IanTayler/MinG
subrepo:
  subdir:   "IanTayler/MinG"
  merged:   "a0a21ec"
upstream:
  origin:   "https://github.com/IanTayler/MinG.git"
  branch:   "master"
  commit:   "a0a21ec"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/IanTayler/MinG/resources/template.tex
+++ b/IanTayler/MinG/resources/template.tex
@@ -7,9 +7,11 @@
 \usepackage[spanish]{babel}
 
 \begin{document}
+    %COPYFROM
 	\scalebox{0.7}{
 		\begin{tabular}{ c }
 			\Tree #<HERE-TREE>
 		\end{tabular}
 	}\\\newline
+    %COPYTO
 \end{document}
