git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "886273c"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "886273c"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,6 +1,15 @@
 Revision history for Term::Choose
 
 
+0.120   2017-04-24
+        - Removed superfluous test
+
+0.119   2017-04-24
+        - Extended mouse mode
+        - Autodetect ncurses library
+        - Update documentation
+        - Code refactoring
+
 0.118   2016-12-16
         - Import subroutines by their names
 
