git subrepo clone (merge) --force https://github.com/nkh/P6-Data-Dump-Tree.git nkh/P6-Data-Dump-Tree
subrepo:
  subdir:   "nkh/P6-Data-Dump-Tree"
  merged:   "0c40687"
upstream:
  origin:   "https://github.com/nkh/P6-Data-Dump-Tree.git"
  branch:   "master"
  commit:   "0c40687"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/nkh/P6-Data-Dump-Tree/Todo
+++ b/nkh/P6-Data-Dump-Tree/Todo
@@ -7,6 +7,8 @@ ColorStr class
 
 eqv not implemented for Match
 
+Do not display empty header in multi lines if it is empty
+
 #2 colums display of dumps
 	given two dumps, handle colors, etc ... and show both side by side
 
