git subrepo clone --force git://github.com/kuerbis/Term-Choose-Util-p6.git kuerbis/Term-Choose-Util-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-Util-p6"
  merged:   "aaafe4e"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-Util-p6.git"
  branch:   "master"
  commit:   "aaafe4e"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-Util-p6/Changes
+++ b/kuerbis/Term-Choose-Util-p6/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::Choose::Util
 
 
+0.020   2017-04-26
+        - Update .travis.yml
+        - Update year copyright
+
 0.019   2016-12-16
         - Import subroutines by their names
 
