git subrepo clone --force https://github.com/nkh/P6-Data-Dump-Tree.git nkh/P6-Data-Dump-Tree
subrepo:
  subdir:   "nkh/P6-Data-Dump-Tree"
  merged:   "919dd0f"
upstream:
  origin:   "https://github.com/nkh/P6-Data-Dump-Tree.git"
  branch:   "master"
  commit:   "919dd0f"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/nkh/P6-Data-Dump-Tree/lib/Data/Dump/Tree.pod
+++ b/nkh/P6-Data-Dump-Tree/lib/Data/Dump/Tree.pod
@@ -604,17 +604,17 @@ variable.
 	config [2]  
 	   0 = \{ \\s* '[' (\\w+) ']' \\h* \\n+ }.Regex  
 	   1 =     [passwords]\n        jack=password1\n (+74)[0..113]  
-	      section =>     [passwords]\n        jack=password1\n (+29)[0..68]  
-		 header =>     [passwords]\n[0..15]  
-		    0 => passwords[5..13]  
-		 kvpair =>         jack=password1\n[16..38]  
-		    identifier => jack[24..27]  
-		    key => jack[24..27]  
-		    identifier => password1[29..37]  
-		    value => password1[29..37]  
-		 kvpair =>         joy=muchmoresecure123\n[39..68]  
-		    identifier => joy[47..49]  
-		    key => joy[47..49]  
+	      <section>     [passwords]\n        jack=password1\n (+29)[0..68]  
+		 <header>     [passwords]\n[0..15]  
+		    <0> passwords[5..13]  
+		 <kvpair>         jack=password1\n[16..38]  
+		    <identifier> jack[24..27]  
+		    <key> jack[24..27]  
+		    <identifier> password1[29..37]  
+		    <value> password1[29..37]  
+		 <kvpair>         joy=muchmoresecure123\n[39..68]  
+		    <identifier> joy[47..49]  
+		    <key> joy[47..49]  
 		
 =head1 BUGS
 Submit bugs (preferably as executable tests) and feel free to make 
