git subrepo clone --force git://github.com/kuerbis/Term-Choose-p6.git kuerbis/Term-Choose-p6
subrepo:
  subdir:   "kuerbis/Term-Choose-p6"
  merged:   "2f35bc2"
upstream:
  origin:   "git://github.com/kuerbis/Term-Choose-p6.git"
  branch:   "master"
  commit:   "2f35bc2"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Choose-p6/Changes
+++ b/kuerbis/Term-Choose-p6/Changes
@@ -1,6 +1,12 @@
 Revision history for Term::Choose
 
 
+0.122   2017-04-30
+        - Fixed "depends" in META6.json
+
+0.121   2017-04-30
+        - Code refactoring
+
 0.120   2017-04-24
         - Removed superfluous test
 
