--- a/kuerbis/Term-Choose-Util-p6/Changes
+++ b/kuerbis/Term-Choose-Util-p6/Changes
@@ -1,6 +1,9 @@
 Revision history for Term::Choose::Util
 
 
+0.021   2017-04-30
+        - Adapted the code to the new version of Term::Choose
+
 0.020   2017-04-26
         - Update .travis.yml
         - Update year copyright
