git subrepo clone --force git://github.com/kuerbis/Term-Form-p6.git kuerbis/Term-Form-p6
subrepo:
  subdir:   "kuerbis/Term-Form-p6"
  merged:   "ca21210"
upstream:
  origin:   "git://github.com/kuerbis/Term-Form-p6.git"
  branch:   "master"
  commit:   "ca21210"
git-subrepo:
  version:  "0.4.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b645cc9"

--- a/kuerbis/Term-Form-p6/Changes
+++ b/kuerbis/Term-Form-p6/Changes
@@ -1,6 +1,10 @@
 Revision history for Term::Form
 
 
+0.016   2017-04-30
+        - Copyright year
+        - Adapted the code to the new version of Term::Choose
+
 0.015   2016-12-16
         - Import subroutines by their names
 
